[package]
name = "utsushi-siglus"
version = "0.0.0"
publish = false
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "UTSUSHI-147 cross-engine substrate-alignment scaffold: pure-Rust Siglus engine port that registers conformance against the utsushi-core substrate facade. Clean-room; xmoezzz/siglus_rs (MPL-2.0) is a research anchor only and is not linked, vendored, or mechanically translated."

[dependencies]
# Intentionally NO `utsushi-reallive` dependency. The Siglus port is a
# sibling of the RealLive port — they share the substrate facade only.
# Sharing through the facade is the load-bearing alignment claim, and is
# proven by `tests/cross_engine_substrate_alignment.rs`.
utsushi-core = { path = "../utsushi-core" }
# UTSUSHI-035 runtime-profile boundary fixtures serialize typed admission
# claims / boundary diagnostics as redacted JSON (secret-refs + one-way
# proof hashes only — never raw key bytes). No `sha2` dep: the one-way
# proof hash reuses `utsushi_core::port::impl_map::sha256_hex`.
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

[package.metadata.research-anchor]
# Research anchor metadata for UTSUSHI-147. The crate intentionally does
# NOT depend on siglus_rs — neither as a source dep nor a build artifact.
# This block exists so audit tooling can detect the boundary statement
# without parsing crate-level docs.
project = "xmoezzz/siglus_rs"
url = "https://github.com/xmoezzz/siglus_rs"
# siglus_rs's published license is MPL-2.0. itotori does NOT take a
# derived-work posture toward siglus_rs: no headers included, no source
# files vendored, no mechanical translation. The license string is
# recorded here as observed, not as imposed on itotori. (The clearest
# bytecode reference, bluecookies/siglus-decompile, states no license and
# is treated as all-rights-reserved, documentation-only; SiglusExtract is
# xmoezzz GPLv3. Neither is vendored, linked, or mechanically translated.)
license = "MPL-2.0"
# Linkage posture: siglus_rs is NOT linked at any tier (source, object,
# or distribution). itotori's distribution posture for this crate is the
# workspace-default `MIT OR Apache-2.0`.
linkage = "none"
# Files referenced (read-only) when re-deriving the cross-engine
# substrate-alignment hypothesis. The hypothesis is that the AVG32 ->
# RealLive -> Siglus lineage carries at the substrate facade level. The
# references below are the research anchors used to validate the lineage
# claim; no source expression is copied. See `docs/research/reallive-engine.md`
# Appendix M for the per-sub-node reusable-vs-RealLive-only map.
files-referenced = ["README.md", "docs/format-overview.md"]

[dev-dependencies]
# The cross-engine substrate-alignment fixture lives in this crate's
# tests/ directory because the Siglus port is the *second* engine —
# adding the RealLive port as a dev-dep here proves the substrate facade
# is the *only* shared surface between the two engines. The reverse
# direction (utsushi-reallive depending on utsushi-siglus) would
# contradict the project's RealLive-only alpha posture.
utsushi-reallive = { path = "../utsushi-reallive" }

[lints]
workspace = true
